it's coming along. fixed that weird bug issue || flexbox justify and align issues

--- a/src/assets/scss/_utils.scss
+++ b/src/assets/scss/_utils.scss
@@ -76,6 +76,7 @@ $size-pad 			: 24px;
 
 // 6* margin
 .marg--top-6 		{ margin-top: $size-pad * 6; }
+.marg--bottom-6 	{ margin-bottom: $size-pad * 6; }
 
 // Half margin
 .marg-h 			{ margin: $size-pad / 2; }
